--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@tasks/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "clean:types": "rimraf apps/frontend/server_types",
+    "gen_server_types": "tsc -p apps/taskqueue/tsconfig.types.json"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^11.0.0",
@@ -10,8 +13,13 @@
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
-    "axios": "^1.6.0",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "axios": "^1.10.0",
     "mysql2": "^3.14.1",
+    "next": "~15.2.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sqlite3": "^5.1.7",
@@ -25,18 +33,23 @@
     "@nx/eslint-plugin": "21.2.2",
     "@nx/js": "21.2.2",
     "@nx/nest": "21.2.2",
+    "@nx/next": "^21.2.2",
     "@nx/node": "21.2.2",
     "@nx/web": "21.2.2",
     "@nx/webpack": "21.2.2",
     "@nx/workspace": "21.2.2",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "~18.16.9",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "nx": "21.2.2",
     "prettier": "^2.6.2",
+    "rimraf": "^6.0.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
