--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "clean:types": "rimraf apps/frontend/server_types",
-    "gen_server_types": "tsc -p apps/taskqueue/tsconfig.types.json"
+    "dev:frontend": "npx nx run @tasks/frontend:dev",
+    "dev:backend": "npx nx run @tasks/taskqueue:serve --configuration=development"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +26,8 @@
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
@@ -35,6 +37,8 @@
     "@nx/nest": "21.2.2",
     "@nx/next": "^21.2.2",
     "@nx/node": "21.2.2",
+    "@nx/react": "21.2.2",
+    "@nx/vite": "21.2.2",
     "@nx/web": "21.2.2",
     "@nx/webpack": "21.2.2",
     "@nx/workspace": "21.2.2",
@@ -42,20 +46,31 @@
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/node": "~18.16.9",
+    "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^3.0.0",
+    "ajv": "^8.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "21.2.2",
     "prettier": "^2.6.2",
     "rimraf": "^6.0.1",
+    "sass": "^1.55.0",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^3.0.0",
     "webpack-cli": "^5.1.4"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "lib",
+    "library"
   ]
 }
