--- a/lib/tsconfig.lib.json
+++ b/lib/tsconfig.lib.json
@@ -7,19 +7,7 @@
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
     "emitDeclarationOnly": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"],
-    "target": "es2021",
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "strictBindCallApply": true,
-    "noFallthroughCasesInSwitch": true,
-       "strictPropertyInitialization": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "paths": {
-      "@tasks/library": ["library"],
-      "@tasks/library/*": ["library/dist/*"]
-    },
+    "types": ["node", "vite/client"]
   },
   "include": ["src/**/*.ts"],
   "references": []
