--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -56,6 +57,7 @@
     "eslint-config-prettier": "^10.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.2.2",
     "prettier": "^2.6.2",
     "rimraf": "^6.0.1",
