--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
+    "cron": "^4.3.1",
     "mysql2": "^3.14.1",
     "next": "~15.2.4",
+    "puppeteer": "^20.9.0",
+    "puppeteer-core": "^24.11.2",
+    "puppeteer-real-browser": "^1.4.2",
+    "pushover-notifications": "^1.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "reflect-metadata": "^0.1.13",
