feat: add Pushover integration with LocalTunnel and testing scripts
- Updated package.json to include new dependencies for Jest testing framework.
- Created start-with-tunnel.ps1 script for automatic server and LocalTunnel startup with Pushover integration.
- Added test-pushover.ps1 script for quick testing of Pushover integration with instructions.

--- a/apps/taskqueue/package.json
+++ b/apps/taskqueue/package.json
@@ -43,6 +43,15 @@
           }
         }
       },
+      "test": {
+        "executor": "@nx/jest:jest",
+        "outputs": [
+          "{workspaceRoot}/coverage/{projectRoot}"
+        ],
+        "options": {
+          "jestConfig": "apps/taskqueue/jest.config.ts"
+        }
+      },
       "docker-build": {
         "dependsOn": [
           "build"
