--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev:frontend": "npx nx run @tasks/frontend:dev",
-    "dev:backend": "npx nx run @tasks/taskqueue:serve --configuration=development"
+    "dev:backend": "npx nx run @tasks/taskqueue:serve --configuration=development",
+    "test": "npx ts-node test-runner.ts"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,7 @@
     "@nestjs/testing": "^11.0.0",
     "@nx/eslint": "21.2.2",
     "@nx/eslint-plugin": "21.2.2",
+    "@nx/jest": "^21.4.1",
     "@nx/js": "21.2.2",
     "@nx/nest": "21.2.2",
     "@nx/next": "^21.2.2",
@@ -52,6 +54,7 @@
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -60,6 +63,7 @@
     "ajv": "^8.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jest": "^30.1.3",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
@@ -67,6 +71,8 @@
     "prettier": "^2.6.2",
     "rimraf": "^6.0.1",
     "sass": "^1.55.0",
+    "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
