--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
     "cron": "^4.3.1",
+    "highlight.js": "^11.11.1",
     "mysql2": "^3.14.1",
     "next": "~15.2.4",
     "puppeteer": "^20.9.0",
@@ -26,7 +27,11 @@
     "pushover-notifications": "^1.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-markdown": "^10.1.0",
     "reflect-metadata": "^0.1.13",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "rxjs": "^7.8.0",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.25",
