feat: Integrate Telegram bot with task queue system
- Added TelegramQueueService for managing queues via Telegram bot.
- Implemented methods for getting queues list, executing queues, and checking queue status.
- Enhanced keyboard utilities for dynamic button creation in Telegram.
- Updated TypeScript configuration for better compatibility and type checking.
- Added comprehensive tests for TelegramQueueService.
- Removed outdated PowerShell scripts for local tunnel setup.
- Documented the integration process and usage instructions in Markdown files.

--- a/apps/taskqueue/tsconfig.spec.json
+++ b/apps/taskqueue/tsconfig.spec.json
@@ -3,9 +3,12 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
+    "moduleResolution": "node",
     "types": ["jest", "node"],
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*.spec.ts",
