--- a/apps/taskqueue/package.json
+++ b/apps/taskqueue/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@nestjs/mapped-types": "*"
+    "@nestjs/mapped-types": "*",
+    "screenshot-desktop": "^1.15.2"
   },
   "name": "@tasks/taskqueue",
   "version": "0.0.1",
