--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@nestjs/typeorm": "^11.0.0",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "cron": "^4.3.1",
+    "form-data": "^4.0.4",
     "highlight.js": "^11.11.1",
     "mysql2": "^3.14.1",
     "next": "~15.2.4",
