--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.11.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cron": "^4.3.1",
     "form-data": "^4.0.4",
     "highlight.js": "^11.11.1",
+    "lucide-react": "^0.544.0",
     "mysql2": "^3.14.1",
     "next": "~15.2.4",
     "puppeteer": "^20.9.0",
