--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev:frontend": "npx nx run @tasks/frontend:dev",
     "dev:backend": "npx nx run @tasks/taskqueue:serve --configuration=development",
+    "dev:mcp": "npx nx run @tasks/mcp-servers:dev",
     "build:lib": "npx nx run @tasks/lib:build",
+    "build:mcp": "npx nx run @tasks/mcp-servers:build",
     "test": "npx nx test taskqueue",
     "typecheck": "npm run typecheck:taskqueue && npm run typecheck:frontend && npm run typecheck:lib",
     "typecheck:taskqueue": "npx tsc --noEmit --project apps/taskqueue/tsconfig.app.json",
@@ -15,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.18.2",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
@@ -31,6 +34,7 @@
     "lucide-react": "^0.544.0",
     "mysql2": "^3.14.1",
     "next": "~15.2.4",
+    "node-cache": "^5.1.2",
     "puppeteer": "^20.9.0",
     "puppeteer-core": "^24.11.2",
     "puppeteer-real-browser": "^1.4.2",
@@ -53,6 +57,7 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
+    "@nx/esbuild": "21.2.2",
     "@nx/eslint": "21.2.2",
     "@nx/eslint-plugin": "21.2.2",
     "@nx/jest": "^21.4.1",
@@ -76,6 +81,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
     "ajv": "^8.0.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.1.3",
@@ -89,12 +95,14 @@
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.0.0",
     "vite-plugin-dts": "~4.5.0",
     "vitest": "^3.0.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "winston": "^3.11.0"
   },
   "workspaces": [
     "apps/*",
