feat(mcp): update MCP scripts for Toshl and Google Calendar integration

--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "dev:frontend": "npx nx run @tasks/frontend:dev",
     "dev:backend": "npx nx run @tasks/taskqueue:serve --configuration=development",
-    "dev:mcp": "npx nx run @tasks/mcp-servers:dev",
+    "dev:mcp-toshl": "npx nx run @tasks/mcp-toshl:dev",
+    "dev:mcp-calendar": "npx nx run @tasks/mcp-google-calendar:dev",
     "build:lib": "npx nx run @tasks/lib:build",
-    "build:mcp": "npx nx run @tasks/mcp-servers:build",
+    "build:mcp-toshl": "npx nx run @tasks/mcp-toshl:build",
+    "build:mcp-calendar": "npx nx run @tasks/mcp-google-calendar:build",
+    "auth:calendar": "npx nx run @tasks/mcp-google-calendar:auth",
+    "install:calendar": "npx nx run @tasks/mcp-google-calendar:install",
     "test": "npx nx test taskqueue",
     "typecheck": "npm run typecheck:taskqueue && npm run typecheck:frontend && npm run typecheck:lib",
     "typecheck:taskqueue": "npx tsc --noEmit --project apps/taskqueue/tsconfig.app.json",
