feat: Implement Google OAuth 2.0 setup and token management
- Added `google-oauth-setup.processor.ts` for handling OAuth operations including generating auth URL, exchanging code for tokens, refreshing tokens, and revoking tokens.
- Integrated SQLite database for storing OAuth tokens securely.
- Created `google-calendar.processor.ts` to manage Google Calendar operations using stored OAuth tokens.
- Developed various operations for calendar management such as listing calendars, creating events, and checking availability.
- Added example JSON files for testing OAuth and calendar operations.
- Created SQL schema for OAuth tokens and state storage.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.2",
     "cron": "^4.3.1",
     "form-data": "^4.0.4",
+    "googleapis": "^160.0.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.544.0",
     "mysql2": "^3.14.1",
@@ -46,6 +47,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-markdown": "^10.1.0",
+    "recal-sdk": "^0.2.10",
     "reflect-metadata": "^0.1.13",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
